# Ask-Ujjan-ChatBot

Backend (Python)/: Dockerfile.dev  compose.yaml  pyproject.toml
Backend (Python)/flash_chatbot/: main.py  settings.py
Frontend/src/app/: globals.css  layout.tsx  page.tsx
Frontend/src/components/: MarkdownRenderer.js
